argocd/applications/staging-workload/lab-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-controller
  namespace: lab-controller
  labels:
    app: lab-controller
  annotations:
    argocd-image-updater.argoproj.io/image-list: api=586794457112.dkr.ecr.eu-west-2.amazonaws.com/lab-controller/labcontroller-api
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/git-branch: main
    argocd-image-updater.argoproj.io/match-tag: "^latest$"
    argocd-image-updater.argoproj.io/update-strategy: latest
    argocd-image-updater.argoproj.io/kustomize.image: api=lab-controller-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: lab-controller
  template:
    metadata:
      labels:
        app: lab-controller
    spec:
      serviceAccountName: lab-controller-sa
      containers:
        - name: lab-controller
          image: 586794457112.dkr.ecr.eu-west-2.amazonaws.com/lab-controller/labcontroller-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      restartPolicy: Always
