argocd/applications/staging-workload/lab-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-controller
  namespace: lab-controller
  labels:
    app: lab-controller
spec:
  selector:
    app: lab-controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
